--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -570,108 +570,134 @@ import "css/service/style_services.css";
           </div>
 
           <div class="page213-content">
-            <table class="costTable" >
 
-              <tr>
-                <td>
-                  Replacement parts
-                </td>
-                <td>
-                  Approximate cost
-                </td>
-              </tr>
+            <div class="content__page-full-hed">
+              <div class="content__page-hed-h">
+                <h2>Microwave Replacement Parts Costs</h2>
+              </div>
+              <div class="content__page-hed-desc"></div>
+            </div>
 
-              <tr>
-                <td>
-                  Magnetron
-                </td>
-                <td>
-                  $50 to $150
-                </td>
-              </tr>
+            <div class="content__page-full-desc">
 
-              <tr>
-                <td>
-                  Door Switches (each)
-                </td>
-                <td>
-                  $5 to $20
-                </td>
-              </tr>
+              <div class="content__page-desc">
+                <p>
+                  Microwave replacement parts costs can vary depending on the specific part needed and the make and model of the microwave. Here are some common replacement parts and their approximate costs:
+                </p>
+              </div>
 
-              <tr>
-                <td>
-                  Door Seals
-                </td>
-                <td>
-                  $10 to $30
-                </td>
-              </tr>
+              <table class="costTable" >
 
-              <tr>
-                <td>
-                  Control Panel
-                </td>
-                <td>
-                  $50 to $200
-                </td>
-              </tr>
+                <tr>
+                  <td>
+                    Replacement parts
+                  </td>
+                  <td>
+                    Approximate cost
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Magnetron
+                  </td>
+                  <td>
+                    $50 to $150
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Door Switches (each)
+                  </td>
+                  <td>
+                    $5 to $20
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Door Seals
+                  </td>
+                  <td>
+                    $10 to $30
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Control Panel
+                  </td>
+                  <td>
+                    $50 to $200
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Turntable Motor
+                  </td>
+                  <td>
+                    $20 to $50
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    High Voltage Diode
+                  </td>
+                  <td>
+                    $5 to $20
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    High Voltage Capacitor
+                  </td>
+                  <td>
+                    $10 to $30
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Transformer
+                  </td>
+                  <td>
+                    $50 to $100
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Fuse
+                  </td>
+                  <td>
+                    $1 to $10
+                  </td>
+                </tr>
+  
+                <tr>
+                  <td>
+                    Waveguide Cover
+                  </td>
+                  <td>
+                    $5 to $20
+                  </td>
+                </tr>
+  
+              </table>
 
-              <tr>
-                <td>
-                  Turntable Motor
-                </td>
-                <td>
-                  $20 to $50
-                </td>
-              </tr>
+              <div class="content__page-desc">
+                <p>
+                  These are approximate costs and can vary depending on factors such as brand, quality, and availability. Additionally, labor costs for installation may also apply if you hire a technician to replace the part. It's essential to consider these factors when budgeting for microwave repairs.
+                </p>
+              </div>
+            </div>
+            <Btn />
 
-              <tr>
-                <td>
-                  High Voltage Diode
-                </td>
-                <td>
-                  $5 to $20
-                </td>
-              </tr>
-
-              <tr>
-                <td>
-                  High Voltage Capacitor
-                </td>
-                <td>
-                  $10 to $30
-                </td>
-              </tr>
-
-              <tr>
-                <td>
-                  Transformer
-                </td>
-                <td>
-                  $50 to $100
-                </td>
-              </tr>
-
-              <tr>
-                <td>
-                  Fuse
-                </td>
-                <td>
-                  $1 to $10
-                </td>
-              </tr>
-
-              <tr>
-                <td>
-                  Waveguide Cover
-                </td>
-                <td>
-                  $5 to $20
-                </td>
-              </tr>
-
-            </table>
+            
           </div>
 
 
