--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -119,44 +119,94 @@ import "css/service/style_services.css";
 
         <div class="full_left_menu_r">
           <div class="list_left">
-            <a href="#pol1">
-              <h2>Frame pools</h2><!-- каркасные бассейны -->
+            <a href="#left-menu-1">
+              <h2>Microwave oven types and their repair needs</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#pol2">
-              <h2>Frost pools</h2><!-- морозостойкие бассейны -->
+            <a href="#left-menu-2">
+              <h2>Common Microwave Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#pol3">
-              <h2>Inflatable pools</h2><!-- надувные бассейны -->
+            <a href="#left-menu-3">
+              <h2>Microwave Parts Explained</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#pol4">
-              <h2>Children pools</h2><!-- детские бассейны  -->
+            <a href="#left-menu-4">
+              <h2>Microwave Replacement Parts Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#pol5">
-              <h2>Spa - Jacuzzi</h2><!-- спа  джакузи  -->
+            <a href="#left-menu-5">
+              <h2>Cost to Repair a Microwave Depending on the Brand</h2>
+            </a>
+          </div>
+
+          <div class="list_left" >
+            <a href="#pol6">
+              <h2>Microwave Repair Labor Costs</h2>
+            </a>
+          </div>
+
+          <div class="list_left">
+            <a href="#pol6">
+              <h2>Microwave Repair Cost - Labor Only Excluding Parts</h2>
+            </a>
+          </div>
+
+          <div class="list_left" >
+            <a href="#pol6">
+              <h2>Ways to Save Money on Microwave Repair</h2>
+            </a>
+          </div>
+
+
+          <div class="list_left">
+            <a href="#pol6">
+              <h2>What is included in regular microwave maintenance and how it can help prevent repairs</h2>
+            </a>
+          </div>
+
+          <div class="list_left">
+            <a href="#pol6">
+              <h2>How to decide whether to repair of replace a microwave</h2>
+            </a>
+          </div>
+
+          <div class="list_left">
+            <a href="#pol6">
+              <h2>Same Day Appliance Repair at your service</h2>
+            </a>
+          </div>
+
+          <div class="list_left" >
+            <a href="#pol6">
+              <h2>How Much Does it Cost to Repair a Microwave oven?</h2>
+            </a>
+          </div>
+
+          <div class="list_left" >
+            <a href="#pol6">
+              <h2>Our Pricing Policy For Microwave Repair And How We Work</h2>
             </a>
           </div>
 
           <div class="list_left" id="list_left-line">
             <a href="#pol6">
-              <h2>Spare bowls</h2><!-- запасные чаши  -->
+              <h2>FAQs</h2>
             </a>
           </div>
         </div>
 
         <div class="page213-container">
-          <div class="page213-content">
+
+          <div class="page213-content" id="left-menu-1">
             <div class="content__page-desc">
               <p>
                 The cost of microwave repair can vary significantly depending on
@@ -189,7 +239,7 @@ import "css/service/style_services.css";
             </div>
           </div>
 
-          <div class="page213-content">
+          <div class="page213-content" id="left-menu-2">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Microwave oven types and their repair needs</h2>
@@ -299,7 +349,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content">
+          <div class="page213-content" id="left-menu-3">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Common Microwave Issues</h2>
@@ -443,7 +493,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content">
+          <div class="page213-content" id="left-menu-4">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Microwave Parts Explained</h2>
@@ -569,7 +619,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content">
+          <div class="page213-content" id="left-menu-5">
 
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
