--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -3,7 +3,12 @@
     --text-shadown-b-h3: 0.6px 0.6px 1px #8f9499;
 }
 
- h2, h3, h4, h5, h6, p {
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     margin: 0;
 }
 
@@ -116,6 +121,13 @@ main {
 
 /* левое меню  навигации*/
 
+.full_left_menu_r::-webkit-scrollbar {
+    width: 6px;
+    height: 8px;
+    background-color: #ffffff00;
+}
+
+
 .full_left_menu_r {
     grid-column: 1/2;
     position: -webkit-sticky;
@@ -135,7 +147,7 @@ main {
 }
 
 .list_left:hover {
-    background-color: rgb(203, 203, 203);
+    background-color: rgb(215, 215, 215);
 }
 
 .list_left a {
@@ -167,24 +179,17 @@ main {
 
 
 
-
-
-
-
-.full_cart-scrol .list_left {
-    background-color: #181818;
+.full_cart-scrol.list_left {
+    background-color: rgb(196, 196, 196);
 }
 
-.full_cart-scrol .list_left h2 {
+.full_cart-scrol.list_left h2 {
     color: #000000;
 }
 
-/* .full_cart-scrol:hover.list_left h2 {
-    color: #1b7aa0;
-} */
-
-
-
+.full_cart-scrol:hover.list_left {
+    background-color: rgb(170, 170, 170);
+}
 
 
 
@@ -312,8 +317,8 @@ main {
     grid-column: 2 / 8;
     position: relative;
     position: sticky;
-    margin: 0 2% 0 2% ;
-}    
+    margin: 0 2% 0 2%;
+}
 
 .page213-container h2 {
     margin-bottom: 20px;
@@ -326,18 +331,41 @@ main {
     font-size: clamp(16px, 3vw, 18px);
 }
 
-.page213-content:nth-child(1){
+.page213-content:nth-child(1) {
     margin: 0 0;
 }
 
 .page213-content {
     margin: 4% 0;
     width: 100%;
+    position: relative;
+}
+
+#left-menu-1::before,
+#left-menu-2::before,
+#left-menu-3::before,
+#left-menu-4::before,
+#left-menu-5::before,
+#left-menu-6::before,
+#left-menu-7::before,
+#left-menu-8::before,
+#left-menu-9::before,
+#left-menu-10::before,
+#left-menu-11::before,
+#left-menu-12::before,
+#left-menu-13::before,
+#left-menu-14::before,
+#left-menu-15::before,
+#left-menu-16::before {
+    content: '';
+    display: block;
+    height: 125px;
+    margin-top: -125px;
 }
 
 .content__page-desc-phot {
     float: left;
-    margin: 10px 15px 10px 0px ;
+    margin: 10px 15px 10px 0px;
 }
 
 .content__page-desc-phot img {
@@ -417,6 +445,7 @@ main {
     .costTable tr {
         font-size: 18px;
     }
+
     .costTable tr:nth-child(1) {
         font-size: 19px;
     }
@@ -1431,6 +1460,3 @@ main {
 
 
 }
-
-
-
