--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -12,6 +12,11 @@ p {
     margin: 0;
 }
 
+b {
+    font-weight: 600;
+    color: #1f1f1f;
+}
+
 .max-w-screen-xl {
     max-width: 100%;
     padding: 0;
@@ -337,6 +342,20 @@ main {
     font-size: clamp(16px, 3vw, 18px);
 }
 
+.page213-container li {
+    margin-bottom: 10px;
+    color: #262626;
+    font-weight: 400;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+
+
+
+
+
+
+
 .page213-content:nth-child(1) {
     margin: 0 0;
 }
@@ -368,6 +387,127 @@ main {
     margin-top: -125px;
     z-index: -5;
     position: relative;
+}
+
+.content__page-desc li {
+    max-width: 100%;
+    align-items: center;
+    position: relative;
+}
+
+.content__page-desc li::before {
+    content: '•';
+    font-size: 30px;
+    color: #ca0913;
+    position: absolute;
+    left: 0px;
+    top: -9px;
+    border-radius: 20%;
+    transition: 0.3s ease-in-out;
+}
+
+.content__page-desc li:last-child:after {
+    content: none;
+}
+
+.content__page-desc ol {
+    counter-reset: item;
+    margin-top: 10px;
+}
+
+.content__page-desc ol>li {
+    counter-increment: item;
+    margin-bottom: 15px;
+    padding-left: 35px;
+    position: relative;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.content__page-desc ol>li::before {
+    content: counter(item) "";
+    position: absolute;
+    left: 5px;
+    top: -3px;
+    font-size: 20px;
+    color: red;
+    filter: drop-shadow(1.5px 1.5px 0.5px #000);
+}
+
+.content__page-desc ol li:hover:before {
+    background: rgba(0, 0, 0, .2);
+    box-shadow: 0 0 0 5px rgba(0, 0, 0, .2);
+}
+
+
+.content__page-desc ol li:after {
+    position: absolute;
+    border-left: 2px dotted #4F5151;
+    width: 2px;
+    bottom: 6px;
+    content: "";
+    left: 16px;
+    top: 40px;
+}
+
+.content__page-desc ol>li:nth-child(-n+9)::after {
+    left: 12px;
+}
+
+.content__page-desc ul {
+    padding-left: 0;
+}
+
+.content__page-desc ul li {
+    position: relative;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    padding-left: 30px;
+    font-weight: 500;
+    list-style: none;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.content__page-desc ul li::before {
+    content: '•';
+    font-size: 30px;
+    color: #ca0913;
+    filter: drop-shadow(0px 0px 0.9px #000);
+    position: absolute;
+    left: 10px;
+    top: -11px;
+}
+
+.content__page-desc ul li:hover:before {
+    box-shadow: none;
+    background: none;
+}
+
+.content__page-desc ul li::after {
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.content__page-full-desc-ph-ri .content__page-desc-phot{
+    float: right;
+    margin: 10px 0px 10px 15px;
 }
 
 .content__page-desc-phot {
@@ -472,6 +612,252 @@ main {
 
 
 
+.content_job-prices {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2%;
+    border-radius: 5px;
+    min-height: 113px;
+}
+
+.content_job-prices-h-m {
+    min-height: auto;
+}
+
+#col-prices {
+    background-color: var(--table-color);
+}
+
+.content_job-prices p {
+    margin: 0;
+    padding: 0% 1% 1% 0%;
+}
+
+.desk_job-prices {
+    text-align: left;
+    width: 90%;
+    display: grid;
+    align-self: center;
+}
+
+.desk_job-prices a {
+    align-self: center;
+}
+
+.desk_job-prices a:hover {
+    text-decoration: underline;
+    color: #767676;
+}
+
+.money_job-prices {
+    text-align: left;
+    align-self: center;
+    min-width: 166px;
+}
+
+.money_job-prices p {
+    white-space: nowrap;
+    width: 100%;
+    font-size: clamp(18px, 5vw, 24px);
+}
+
+.desk_job-prices p:nth-child(1) {
+    font-size: clamp(18px, 5vw, 24px);
+    padding: 1% 1% 0% 0%;
+}
+
+.content_job-prices-h-m p:nth-child(1) {
+    font-size: clamp(22px, 5vw, 24px);
+    padding: 1% 1% 1% 0%;
+}
+
+.desk_job-prices p {
+    font-size: clamp(16px, 4vw, 20px);
+}
+
+.pros_job-prices {
+    width: 80%;
+    margin: 0 auto;
+    padding: 10px 10px;
+    margin-top: 3%;
+    border-radius: 5px;
+    border: solid 2px #ff2a2a;
+    background-color: rgb(231 231 231 / 58%);
+}
+
+.pros_job-prices p {
+    font-size: clamp(16px, 4vw, 18px);
+    font-weight: 500;
+    margin: 0;
+}
+
+
+
+
+
+
+
+
+
+.description_maintenance {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 0 2%;
+}
+
+.description_maintenance h3 {
+    margin-top: 25px;
+    margin-bottom: 5px;
+    font-weight: 600;
+    font-size: clamp(22px, 5vw, 24px) !important;
+    text-shadow: var(--text-shadown-b-h3);
+    text-align: center;
+}
+
+.description_maintenance b {
+    text-shadow: var(--text-shadown-b-h3);
+}
+
+.description_maintenance li {
+    max-width: 100%;
+    align-items: center;
+    position: relative;
+}
+
+.description_maintenance li::before {
+    content: '•';
+    font-size: 30px;
+    color: #ca0913;
+    position: absolute;
+    left: 0px;
+    top: -9px;
+    border-radius: 20%;
+    transition: 0.3s ease-in-out;
+}
+
+.description_maintenance li:last-child:after {
+    content: none;
+}
+
+
+
+
+
+.description_maintenance ol {
+    counter-reset: item;
+    margin-top: 10px;
+}
+
+.description_maintenance ol>li {
+    counter-increment: item;
+    margin-bottom: 15px;
+    padding-left: 35px;
+    position: relative;
+    font-weight: 500;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.description_maintenance ol>li::before {
+    content: counter(item) "";
+    position: absolute;
+    left: 5px;
+    top: -3px;
+    font-weight: 700;
+    font-size: 20px;
+    color: red;
+    filter: drop-shadow(1.5px 1.5px 0.5px #000);
+}
+
+.description_maintenance ol li:hover:before {
+    background: rgba(0, 0, 0, .2);
+    box-shadow: 0 0 0 5px rgba(0, 0, 0, .2);
+}
+
+
+.description_maintenance ol li:after {
+    position: absolute;
+    border-left: 2px dotted #4F5151;
+    width: 2px;
+    bottom: 6px;
+    content: "";
+    left: 16px;
+    top: 40px;
+}
+
+.description_maintenance ol>li:nth-child(-n+9)::after {
+    left: 12px;
+}
+
+.description_maintenance ul {
+    padding-left: 0;
+}
+
+.description_maintenance ul li {
+    position: relative;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    padding-left: 30px;
+    font-weight: 500;
+    list-style: none;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.description_maintenance ul li::before {
+    content: '•';
+    font-size: 30px;
+    color: #ca0913;
+    filter: drop-shadow(0px 0px 0.9px #000);
+    position: absolute;
+    left: 10px;
+    top: -11px;
+}
+
+.description_maintenance ul li:hover:before {
+    box-shadow: none;
+    background: none;
+}
+
+.description_maintenance ul li::after {
+    display: none;
+}
+
+.head_description_maintenance {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.head_description_maintenance svg {
+    margin: 0 10px 0 0;
+}
+
+.head_description_maintenance p {
+    align-self: center;
+    text-shadow: var(--text-shadown-b-h3);
+}
+
+.conclusion-description_maintenance {
+    margin-top: 4%;
+}
+
+.conclusion-description_maintenance:hover svg {
+    fill: #ca0913;
+    transition: 0.3s;
+}
+
+.conclusion-description_maintenance:hover .cls-1 {
+    stroke: #ca0913;
+    transition: 0.3s;
+}
+
+.conclusion-description_maintenance p {
+    margin-left: 33px;
+}
+
+.head_description_maintenance p {
+    margin: 0;
+}
+
+
 
 
 
@@ -498,6 +884,21 @@ main {
 
     .costTable tr:nth-child(1) {
         font-size: 19px;
+    }
+
+    .content_job-prices {
+        padding: 3% 0%;
+        min-height: auto;
+    }
+
+    .money_job-prices {
+        text-align: right;
+        min-width: auto;
+        padding-right: 7px;
+    }
+
+    .money_job-prices p {
+        white-space: wrap;
     }
 }
 
@@ -941,83 +1342,7 @@ main {
     justify-self: center;
 }
 
-.content_job-prices {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 2%;
-    border-radius: 5px;
-    min-height: 194px;
-}
 
-.content_job-prices-h-m {
-    min-height: auto;
-}
-
-#col-prices {
-    background-color: var(--table-color);
-}
-
-.content_job-prices p {
-    margin: 0;
-    padding: 0% 1% 1% 0%;
-}
-
-.desk_job-prices {
-    text-align: left;
-    width: 90%;
-    display: grid;
-    align-self: center;
-}
-
-.desk_job-prices a {
-    align-self: center;
-}
-
-.desk_job-prices a:hover {
-    text-decoration: underline;
-    color: #767676;
-}
-
-.money_job-prices {
-    text-align: left;
-    align-self: center;
-    min-width: 166px;
-}
-
-.money_job-prices p {
-    white-space: nowrap;
-    width: 100%;
-    font-size: clamp(18px, 5vw, 24px);
-}
-
-.desk_job-prices p:nth-child(1) {
-    font-size: clamp(18px, 5vw, 24px);
-    padding: 1% 1% 0% 0%;
-}
-
-.content_job-prices-h-m p:nth-child(1) {
-    font-size: clamp(22px, 5vw, 24px);
-    padding: 1% 1% 1% 0%;
-}
-
-.desk_job-prices p {
-    font-size: clamp(16px, 4vw, 20px);
-}
-
-.pros_job-prices {
-    width: 80%;
-    margin: 0 auto;
-    padding: 10px 10px;
-    margin-top: 3%;
-    border-radius: 5px;
-    border: solid 2px #ff2a2a;
-    background-color: rgb(231 231 231 / 58%);
-}
-
-.pros_job-prices p {
-    font-size: clamp(16px, 4vw, 18px);
-    font-weight: 500;
-    margin: 0;
 } */
 
 
@@ -1091,173 +1416,6 @@ main {
     padding: 0% 3% 3%;
 }
 
-
-.description_maintenance {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 0 2%;
-}
-
-.description_maintenance h3 {
-    margin-top: 25px;
-    margin-bottom: 5px;
-    font-weight: 600;
-    font-size: clamp(22px, 5vw, 24px) !important;
-    text-shadow: var(--text-shadown-b-h3);
-    text-align: center;
-}
-
-.description_maintenance b {
-    text-shadow: var(--text-shadown-b-h3);
-}
-
-.description_maintenance li {
-    max-width: 100%;
-    align-items: center;
-    position: relative;
-}
-
-.description_maintenance li::before {
-    content: '•';
-    font-size: 30px;
-    color: #ca0913;
-    position: absolute;
-    left: 0px;
-    top: -9px;
-    border-radius: 20%;
-    transition: 0.3s ease-in-out;
-}
-
-.description_maintenance li:last-child:after {
-    content: none;
-}
-
-
-
-
-
-.description_maintenance ol {
-    counter-reset: item;
-    margin-top: 10px;
-}
-
-.description_maintenance ol>li {
-    counter-increment: item;
-    margin-bottom: 15px;
-    padding-left: 35px;
-    position: relative;
-    font-weight: 500;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-.description_maintenance ol>li::before {
-    content: counter(item) "";
-    position: absolute;
-    left: 5px;
-    top: -3px;
-    font-weight: 700;
-    font-size: 20px;
-    color: red;
-    filter: drop-shadow(1.5px 1.5px 0.5px #000);
-}
-
-.description_maintenance ol li:hover:before {
-    background: rgba(0, 0, 0, .2);
-    box-shadow: 0 0 0 5px rgba(0, 0, 0, .2);
-}
-
-
-.description_maintenance ol li:after {
-    position: absolute;
-    border-left: 2px dotted #4F5151;
-    width: 2px;
-    bottom: 6px;
-    content: "";
-    left: 16px;
-    top: 40px;
-}
-
-.description_maintenance ol>li:nth-child(-n+9)::after {
-    left: 12px;
-}
-
-
-
-
-
-
-.description_maintenance ul {
-    padding-left: 0;
-}
-
-.description_maintenance ul li {
-    position: relative;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    padding-left: 30px;
-    font-weight: 500;
-    list-style: none;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-.description_maintenance ul li::before {
-    content: '•';
-    font-size: 30px;
-    color: #ca0913;
-    filter: drop-shadow(0px 0px 0.9px #000);
-    position: absolute;
-    left: 10px;
-    top: -11px;
-}
-
-.description_maintenance ul li:hover:before {
-    box-shadow: none;
-    background: none;
-}
-
-.description_maintenance ul li::after {
-    display: none;
-}
-
-
-
-
-
-.head_description_maintenance {
-    display: flex;
-    margin-bottom: 5px;
-}
-
-.head_description_maintenance svg {
-    margin: 0 10px 0 0;
-}
-
-.head_description_maintenance p {
-    align-self: center;
-    text-shadow: var(--text-shadown-b-h3);
-}
-
-.conclusion-description_maintenance {
-    margin-top: 4%;
-}
-
-.conclusion-description_maintenance:hover svg {
-    fill: #ca0913;
-    transition: 0.3s;
-}
-
-.conclusion-description_maintenance:hover .cls-1 {
-    stroke: #ca0913;
-    transition: 0.3s;
-}
-
-.conclusion-description_maintenance p {
-    margin-left: 33px;
-}
-
-.head_description_maintenance p {
-    margin: 0;
-}
 
 
 
@@ -1448,10 +1606,7 @@ main {
         width: 100%;
     }
 
-    .content_job-prices {
-        padding: 3% 0%;
-        min-height: auto;
-    }
+   
 
     .desk_job-prices {
         padding-left: 7px;
@@ -1469,15 +1624,6 @@ main {
         top: -5px;
     }
 
-    .money_job-prices {
-        text-align: right;
-        min-width: auto;
-        padding-right: 7px;
-    }
-
-    .money_job-prices p {
-        white-space: wrap;
-    }
 
     .pros_job-prices {
         width: 100%;
@@ -1493,6 +1639,16 @@ main {
     .content-1_maintenance {
         margin-bottom: 15px;
     }
+
+
+
+
+
+
+
+
+
+
 
     .questions li:before {
         top: -12px;
