--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -36,7 +36,6 @@ import "css/service/style_services.css";
       </div>
 
       <div class="page213">
-
         <div class="open-full_left">
           <svg
             width="40px"
@@ -152,7 +151,6 @@ import "css/service/style_services.css";
         </div>
 
         <div class="page213-container">
-          
           <div class="page213-content" id="left-menu-1">
             <div class="content__page-desc">
               <p>
@@ -987,10 +985,14 @@ import "css/service/style_services.css";
                     <div class="desk_job-prices">
                       <a href="#"
                         ><p>
-                          Microwave not heating properly, sparking, or making loud buzzing noises.
+                          Microwave not heating properly, sparking, or making
+                          loud buzzing noises.
                         </p></a
                       >
-                      <p>Microwave High Voltage Diodes or Capacitors replacement cost</p>
+                      <p>
+                        Microwave High Voltage Diodes or Capacitors replacement
+                        cost
+                      </p>
                     </div>
                     <div class="money_job-prices"><p>$80 - $100</p></div>
                   </div>
@@ -1012,6 +1014,7 @@ import "css/service/style_services.css";
               <div class="content__page-desc">
 
                 <div class="description_maintenance">
+
                   <div class="conclusion-description_maintenance">
                     <div class="head_description_maintenance">
                       <svg
@@ -1058,24 +1061,10 @@ import "css/service/style_services.css";
                       <p><b>Timely maintenance</b></p>
                     </div>
                     <p>
-                      - Timely maintenance can save you money on unnecessary
-                      repairs and increase your appliance’s longevity. We
-                      charge a flat fee of $80 for the BBQ grill maintenance
-                      service.
-                    </p>
-                    <p>
-                      - BBQ grill maintenance includesa thorough cleaning of
-                      the grill grates, burners, and interior components,
-                      inspection and cleaning of the exterior surfaces like
-                      control panels and knobs, checking and adjusting gas
-                      supply and pressure, lubricating moving parts such as
-                      lid hinges, replacing worn or damaged components like
-                      ignitors and valves, and conducting a general tune-up
-                      to ensure all functions are operational, thereby
-                      extending the grill's lifespan and ensuring safe,
-                      reliable use.
+                      - Timely maintenance can save you money on unnecessary microwave repairs and increase your appliance’s longevity. We charge a flat fee of $80 for our comprehensive microwave maintenance service. This service includes inspecting and cleaning internal components, checking electrical systems and door seals, cleaning surfaces, testing functions, replacing worn parts, and cleaning exhaust vents and filters to maintain safe and efficient operation. Additionally, we provide personalized recommendations for continued safe and reliable operation.
                     </p>
                   </div>
+
                   <div class="conclusion-description_maintenance">
                     <div class="head_description_maintenance">
                       <svg
@@ -1109,17 +1098,13 @@ import "css/service/style_services.css";
                           x2="12"
                           y2="17.73"></line></svg
                       >
-                      <p><b>Avoid DIY range hood repair</b></p>
+                      <p><b>Avoid DIY microwave repair</b></p>
                     </div>
                     <p>
-                      - While the idea of DIY BBQ grill repair might seem
-                      appealing for cost savings, it poses significant
-                      safety concerns and potential long-term costs. It's
-                      crucial to consult a professional for appliance repair
-                      to ensure safety and avoid additional expenses from
-                      improper fixes.
+                      - While the idea of DIY microwave repair might seem appealing for cost savings, it poses significant safety concerns and potential long-term costs. Attempting to fix your microwave on your own can lead to safety hazards and further damage, ultimately costing more in the long run. It's crucial to consult a professional for appliance repair to ensure safety and avoid additional expenses from improper fixes. Trusting experts ensures that your microwave is repaired correctly and safely.
                     </p>
                   </div>
+
                   <div class="conclusion-description_maintenance">
                     <div class="head_description_maintenance">
                       <svg
@@ -1136,23 +1121,22 @@ import "css/service/style_services.css";
                       <p><b>Find a company that provides a warranty.</b></p>
                     </div>
                     <p>
-                      - At the Same Day Appliance Repair, we provide up to
-                      three months of warranty.
+                      - When choosing a repair company, it's important to find one that provides a warranty for their services. At Same Day Appliance Repair, we offer up to three months of warranty on our repair services. This warranty ensures that you are covered for any issues that may arise after the repair, giving you peace of mind and confidence in the quality of our work. Our commitment to customer satisfaction includes providing reliable and guaranteed repairs.
                     </p>
                   </div>
+
                 </div>
+                
               </div>
             </div>
             <Btn />
           </div>
-          
         </div>
-
       </div>
     </main>
     <Cta />
   </Container>
 </Layout>
-  <Arrow />
-  <Focus />
-  <Faqs/>
+<Arrow />
+<Focus />
+<Faqs />
