--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -702,7 +702,7 @@ main {
 .description_maintenance {
     width: 100%;
     margin-bottom: 20px;
-    padding: 0 2%;
+    padding: 0 0;
 }
 
 .description_maintenance h3 {
@@ -716,6 +716,7 @@ main {
 
 .description_maintenance b {
     text-shadow: var(--text-shadown-b-h3);
+    color: #000;
 }
 
 .description_maintenance li {
@@ -836,7 +837,7 @@ main {
 }
 
 .conclusion-description_maintenance {
-    margin-top: 4%;
+    margin-top: 2%;
 }
 
 .conclusion-description_maintenance:hover svg {
